--- a/src/app/modules/shared/header/header.component.html
+++ b/src/app/modules/shared/header/header.component.html
@@ -4,7 +4,7 @@
     <span class="text-lg font-semibold">Atom - TODO</span>
   </div>
   <div class="flex items-center gap-4">
-    <button class="text-gray-700 hover:text-gray-900 focus:outline-none border-2 border-gray-200 px-4 py-2 rounded-lg transition-colors duration-200 cursor-pointer">
+    <button (click)="logout()" class="text-gray-700 hover:text-gray-900 focus:outline-none border-2 border-gray-200 px-4 py-2 rounded-lg transition-colors duration-200 cursor-pointer">
       Cerrar sesión
     </button>
   </div>
