--- a/src/app/modules/home/task/task.component.html
+++ b/src/app/modules/home/task/task.component.html
@@ -6,18 +6,18 @@
         <h2 class="text-xl font-semibold">Nueva Tarea</h2>
         <!-- <button class="bg-black text-white px-4 py-2 rounded-lg">Agregar tarea</button> -->
       </div>
-      <form>
+      <form [formGroup]="createTaskForm" (ngSubmit)="onSubmitTask()">
         <div class="mt-4 flex flex-col gap-2">
           <label for="taskName" class="block text-md font-medium text-gray-700">Nombre de la tarea</label>
           <input type="text" id="taskName" name="taskName"
             class="w-full bg-white border-2 h-12 p-4 rounded border-gray-100"
-            placeholder="Ingrese el nombre de la tarea">
+            placeholder="Ingrese el nombre de la tarea" formControlName="title" required>
         </div>
         <div class="mt-4 flex flex-col gap-2">
           <label for="taskDescription" class="block text-md font-medium text-gray-700">Descripción</label>
           <textarea id="taskDescription" name="taskDescription" rows="3"
             class="w-full bg-white border-2 p-4 rounded border-gray-100"
-            placeholder="Ingrese la descripción de la tarea"></textarea>
+            placeholder="Ingrese la descripción de la tarea" formControlName="description"></textarea>
         </div>
 
         <div>
