--- a/src/app/modules/home/components/task-card/task-card.component.html
+++ b/src/app/modules/home/components/task-card/task-card.component.html
@@ -29,10 +29,10 @@
       <p class="text-gray-500 border-1 rounded-lg px-2 py-1 text-sm">{{task.status}}</p>
     </div>
     <p>{{task.description}}</p>
-    <p class="text-gray-500">{{task.createdAt | date}}</p>
+    <p class="text-gray-500">{{task.createdAt | date:'medium'}}</p>
   </div>
   <div class="flex gap-3 mt-2 mr-4 flex-col sm:flex-row items-end md:items-center justify-center">
     <em (click)="emitUpdateTask()" class="pi pi-pen-to-square cursor-pointer"></em>
-    <em class="pi pi-trash text-red-500 cursor-pointer"></em>
+    <em (click)="emitDeleteTask()" class="pi pi-trash text-red-500 cursor-pointer"></em>
   </div>
 </div>
